--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,26 +15,24 @@
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint",
-        "prettier/prettier"
-    ],
+    "plugins": ["@typescript-eslint","prettier"],
     "rules": {
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
             "ignorePackages",
             {
-              "ts": "never"
+                "ts": "never"
             }
-          ]
+        ],
+        "@typescript-eslint/camelcase": "off"
     },
     "settings": {
         "import/resolver": {
-          "typescript": {}
+            "typescript": {}
         }
-      }
+    }
 }
